--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <h1> NOT RENDERED </h1>
     </div>
 
-    <script type="module" src = "./app.js"></script>
+    <script type="module" src = "./src/app.js"></script>
 </body>
 </html>
